fix(styles): Remove title alignment that affect other sections for now

--- a/content-src/components/DiscoveryStreamComponents/SectionTitle/_SectionTitle.scss
+++ b/content-src/components/DiscoveryStreamComponents/SectionTitle/_SectionTitle.scss
@@ -1,7 +1,4 @@
 .section-title {
-  text-align: center;
-  width: 100%;
-
   ul {
     margin: 0;
     padding: 0;
